NASA APOD - Pic of the day

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,14 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@environment/*": ["./src/environments/*"],
+      "@core/*":["./src/app/core/*"],
+      "@layout/*":["./src/app/layout/*"],
+      "@shared/*":["./src/app/shared/*"],
+      "@features/*":["./src/app/features/*"],
+      "@models/*":["./src/app/types/*"]
+    }
   }
 }
